source/assets/styles/pages/index/_hero.scss
.index .hero {
  background: url('../images/hero-bg.jpg')  center center / cover;
  z-index: 1;

  @media (max-width: 960px) {
    background-attachment: fixed;
  }

  @media (max-width: 700px) {
    background-image: url('../images/hero-bg-mobile.jpg');
    background-attachment: fixed;
  }

  > .container {
    @include display(flex);
  }

  header {
    margin-top: 3rem;
  }

  h1,
  h3 {
    text-shadow: 0 2px 0 $color-body;
  }

  h1 {
    color: $color-primary;
  }

  .phone-demo-container {
    margin: 5rem 3rem #{-$padding-homepage-section};
    height: 520px;
  }

  @media (max-width: $screen-md-max) {
    > .container {
      @include flex-direction(column);
      @include align-items(center);
    }

    .phone-demo-container {
      @include order(1);
      margin-top: 2rem;
    }

    .sales-pitch {
      width: 100%;
      margin-top: 2.5rem;
    }

    .scroll-link {
      display: none;
    }

    .app-links {
      @include transform(scale(0.9));
      @include transform-origin(top left);
    }
  }

  @media (max-width: 400px) {
    .phone-demo-container {
      @include transform(scale(0.9));
      margin: 0;
    }
  }

  @media (max-width: 325px) {
    .phone-demo-container {
      @include transform(scale(0.8));
    }
  }

  @media (min-width: $screen-lg-min) {
    > .container {
      @include align-items(flex-end);
      margin-top:3.5rem;
    }

    .sales-pitch {
      margin-top: 5rem;
      margin-bottom: 4rem;
      margin-left: 3rem;
    }
  }
}

